Updated .gitignore for C#/VS

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
+# =========================
+# Visual Studio Files
+# =========================
+
+[Oo]bj
+[Bb]in
+*.user
+*.suo
+*.[Cc]ache
+*.bak
+*.ncb
+*.log 
+*.DS_Store
+*.sln
+*.config
+*.csproj
+*AssemblyInfo.cs
+Ankh.NoLoad
+
+# =========================
+# Operating System Files
+# =========================
+
+# Windows
+# =========================
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -16,10 +42,6 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
-
-# =========================
-# Operating System Files
-# =========================
 
 # OSX
 # =========================
